# TapMenu

./: .gitignore  AGENTS.md  PRD.md
backend/: .env.example  pyproject.toml  schema.yaml
backend/core/: settings.py  urls.py  views.py
backend/present/app/account/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/present/app/analytics/: apps.py
backend/present/app/loyalty/: apps.py  models.py  serializers.py
backend/present/app/menu/: apps.py  models.py  serializers.py  urls.py  views.py
backend/present/app/orders/: apps.py  models.py  serializers.py  urls.py  views.py
backend/present/app/payments/: apps.py  models.py  serializers.py
backend/present/app/restaurants/: apps.py  models.py  serializers.py  urls.py  views.py
backend/present/app/reviews/: apps.py  models.py  serializers.py
backend/present/app/tables/: apps.py  models.py  serializers.py  urls.py  views.py
backend/present/core/: settings.py  urls.py
backend/restaurant/: models.py  serializers.py  tests.py  urls.py  views.py
backend/restaurant/management/commands/: seed_data.py
backend/restaurant/migrations/: 0001_initial.py  0002_product_image_url_restaurant_banner_url_and_more.py  0003_product_discount_product_is_favorite_product_is_new_and_more.py  0004_category_is_active_category_type.py  0005_alter_category_slug.py
backend/users/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_reset_token_user_reset_token_created_at.py
docs/: PLAN.md  PRD.md  TASK.md
(+90 files in other folders)
